Fix overflow text in TodoItem

--- a/src/CSS/TodoItem.css
+++ b/src/CSS/TodoItem.css
@@ -4,12 +4,19 @@
     align-items: center;
     font-size: 1.2rem;
     text-align: left;
+    word-wrap: break-word;
 }
 
 .TodoItem p {
     margin: 0;
     color: #696969;
     transition: all 0.3s;
+    width: 70%; 
+    /* overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical; */
 }
 
 .TodoItem--active p {
@@ -19,6 +26,7 @@
 
 .TodoItem__check {
     position: relative;
+    flex-shrink: 0;
     width: 1.7rem;
     height: 1.7rem;
     border-radius: 0.5rem;
